# stressberry

./: .gitignore  .pylintrc  FORK-README.md  Makefile  README.md  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  test.yml
helpers/: plot-compare.sh  plot-individual.sh  runtest.sh  show-metric.py
stressberry/: __about__.py  __init__.py  cli.py  main.py
stressberry/cli/: __init__.py  helpers.py  plot.py  run.py
test/: test_cli.py  test_stressberry.py
tools/: stressberry-plot  stressberry-run
