[metadata]
name = stressberry
version = 0.3.0
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Stress tests for the Raspberry Pi
url = https://github.com/nschloe/stressberry
project_urls =
    Code=https://github.com/nschloe/stressberry
    Issues=https://github.com/nschloe/stressberry/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    cleanplotlib
    importlib_metadata
    matplotlib
    pyyaml
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    stressberry-run = stressberry.cli:run
    stressberry-plot = stressberry.cli:plot
