[metadata]
name = stressberry
version = 0.3.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Stress tests for the Raspberry Pi
url = https://github.com/nschloe/stressberry
project_urls =
    Code=https://github.com/nschloe/stressberry
    Issues=https://github.com/nschloe/stressberry/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    dufte
    importlib_metadata;python_version<"3.8"
    matplotlib
    pyyaml
python_requires = >=3.6

[options.entry_points]
console_scripts =
    stressberry-run = stressberry.cli:run
    stressberry-plot = stressberry.cli:plot
